--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "http": "0.0.1-security",
     "socket.io": "^4.5.0"
   },
   "scripts": {
